--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,6 +57,14 @@ button:hover {
   background-color: #3e8e41;
 }
 
+.btn-delete{
+  background-color: #FF6347;
+}
+
+.btn-delete:hover{
+  background-color: #a82222;
+}
+
 .points {
   width: 40%;
   display: flex;
@@ -68,4 +76,78 @@ button:hover {
 .pointsSpan {
   margin-bottom: 20px;
   padding: 10px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user-links {
+  display: flex;
+}
+
+.user-links button {
+  margin-left: 10px;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.btn-create-competition {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-create-competition:hover {
+  background-color: #3e8e41;
+}
+
+.competition-card {
+  background-color: #f2f2f2;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  width: 100%; /* Set the width to 100% of the screen */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btn-competition {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.competition-elements {
+  display: flex;
+}
+
+.competition-elements button {
+  margin-left: 10px;
+}
+
+.sharing-text {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  display: none;
+  margin-right: 10px;
 }
