--- a/views/create.pug
+++ b/views/create.pug
@@ -40,4 +40,4 @@ html
         span(class = "pointsSpan") / 
         input(type="text", name="losePoints", id="losePoints", pattern="^[0-9]+(\.[0-9]+)?$", required, placeholder="Gubitak")
 
-      button(type="submit") Submit
+      button(type="submit") Stvori
