--- a/views/header.pug
+++ b/views/header.pug
@@ -9,6 +9,7 @@ header
         button(onclick="window.location.href='/logout'") Odjava
     else 
       .user-links
+        button(onclick="window.location.href='/'") Početna stranica
         button(onclick="window.location.href='/login'") Prijava
         button(onclick="window.location.href='/sign-up'") Registracija
 
