--- a/views/main.pug
+++ b/views/main.pug
@@ -19,3 +19,5 @@ html
           button(type="submit", value="Home") Početna stranica
       form(action="/login", method="get")
         button(type="submit", value="Login") Prijava
+      form(action="/sign-up", method="get")
+        button(type="submit", value="Sign up") Registracija
