--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,8 +95,8 @@ button:hover {
 .profile-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
   padding: 20px;
 }
 
