--- a/views/main.pug
+++ b/views/main.pug
@@ -16,8 +16,8 @@ html
       
     else
       form(action="/", method="get")
-          button(type="submit", value="Home") Početna stranica
+          button(type="submit", value="Home", style="width: 20%;") Početna stranica
       form(action="/login", method="get")
-        button(type="submit", value="Login") Prijava
+        button(type="submit", value="Login", style="width: 20%;") Prijava
       form(action="/sign-up", method="get")
-        button(type="submit", value="Sign up") Registracija
+        button(type="submit", value="Sign up", style="width: 20%;") Registracija
